add "cmake", "BGMRPCConsole/CallGraph" modules modified "BGMRPCConsole/CMakeLists.txt" "CMakeLists.txt" "BGMRPCClientQml/CMakeLists.txt"

--- a/BGMRPCClientQml/CMakeLists.txt
+++ b/BGMRPCClientQml/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(
 
 set(CMAKE_AUTOMOC ON)
 
-include(../../../cmake/BGSQml.cmake)
+include(../cmake/BGSQml.cmake)
 
 message(${BGS_QML_IMPORT_PATH})
 
