--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 3.18)
+
 project(BGMRPCClientQml VERSION 2.0.0)
 
 find_package(
@@ -17,11 +19,16 @@ message(${BGS_QML_IMPORT_PATH})
 
 qt_add_qml_module(
   BGMRPCClientQml
-  URI BGStudio.BGMRPC
-  VERSION 1.0
-  OUTPUT_DIRECTORY BGStudio/BGMRPC
-  QML_FILES BGMRPC.qml
+  URI
+  BGStudio.BGMRPC
+  VERSION
+  1.0
+  OUTPUT_DIRECTORY
+  BGStudio/BGMRPC
+  QML_FILES
+  BGMRPC.qml
   NO_PLUGIN
   DESIGNER_SUPPORTED)
 
-install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/BGStudio DESTINATION ${BGS_QML_IMPORT_PATH})
+install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/BGStudio
+        DESTINATION ${BGS_QML_IMPORT_PATH})
