--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,24 @@ cmake_minimum_required(VERSION 3.18)
 
 project(BGMRPC VERSION 2.0.0)
 
+if(NOT DEFINED QT_NAMES)
+    SET(QT_NAMES "Qt6" "Qt5")
+endif()
+
+find_package(
+  QT NAMES ${QT_NAMES}#Qt6 Qt5
+  COMPONENTS Core Network Qml
+  REQUIRED)
+
 add_subdirectory(BGMRPCCommon)
-add_subdirectory(BGMRPCd)
 add_subdirectory(BGMRPCObjectInterface)
-add_subdirectory(BGMRPCCtrl)
 add_subdirectory(BGMRPCObjectLoader)
+add_subdirectory(BGMRPCCtrl)
+
+if(QT_VERSION_MAJOR EQUAL 6)
+    add_subdirectory(BGMRPCd)
+    add_subdirectory(BGMRPCClient)
+    add_subdirectory(BGMRPCClientQml)
+endif()
 
 add_subdirectory(interfaces)
-
-add_subdirectory(BGMRPCClient)
-
-add_subdirectory(BGMRPCClientQml)
