--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -1,3 +1,14 @@
 cmake_minimum_required(VERSION 3.18)
 
-add_subdirectory(JsPlugin2)
+project(Interfaces)
+
+find_package(
+  QT NAMES Qt6 Qt5
+  COMPONENTS Core Network Qml
+  REQUIRED)
+
+if (QT_VERSION_MAJOR EQUAL 5)
+    add_subdirectory(PythonInterface)
+elseif(QT_VERSION_MAJOR EQUAL 6)
+    add_subdirectory(JsPlugin2)
+endif()
