Server user permission control

--- a/BGMRPCCtrl/CMakeLists.txt
+++ b/BGMRPCCtrl/CMakeLists.txt
@@ -17,9 +17,9 @@ find_package(
   REQUIRED)
 
 if(QT_VERSION_MAJOR EQUAL 5)
-    set(RUNTIME_OUTPUT_NAME "BGMRPCCtrl-qt5")
+  set(RUNTIME_OUTPUT_NAME "BGMRPCCtrl-qt5")
 else()
-    set(RUNTIME_OUTPUT_NAME "BGMRPCCtrl")
+  set(RUNTIME_OUTPUT_NAME "BGMRPCCtrl")
 endif()
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -39,6 +39,17 @@ target_link_libraries(
   BGMRPCCtrl PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Network
                      BGMRPCCommon)
 
-install(TARGETS BGMRPCCtrl
-        RUNTIME DESTINATION ${BGMRPC_REMOTE}/${CMAKE_INSTALL_BINDIR}
-                COMPONENT BGMRPC_remote)
+install(
+  TARGETS BGMRPCCtrl
+  RUNTIME
+    DESTINATION ${BGMRPC_REMOTE}/${CMAKE_INSTALL_BINDIR}
+    PERMISSIONS
+      SETUID
+      OWNER_READ
+      OWNER_WRITE
+      OWNER_EXECUTE
+      GROUP_READ
+      GROUP_EXECUTE
+      WORLD_READ
+      WORLD_EXECUTE
+    COMPONENT BGMRPC_remote)
