Move BGMRPCClient to new repositories

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cmake"]
 	path = cmake
 	url = https://github.com/BlueGhostStudio/BGStudio-cmake.git
+[submodule "BGMRPCClient"]
+	path = BGMRPCClient
+	url = https://github.com/BlueGhostStudio/BGMRPCClient.git
