--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -11,4 +11,5 @@ if (QT_VERSION_MAJOR EQUAL 5)
     add_subdirectory(PythonInterface)
 elseif(QT_VERSION_MAJOR EQUAL 6)
     add_subdirectory(JsPlugin2)
+    add_subdirectory(BGCMS)
 endif()
