--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required(VERSION 3.18)
 
-project(BGMRPC2 VERSION 1.0.0)
+include(cmake/BGMRPC.cmake)
+
+project(BGMRPC2 VERSION ${BGMRPC_VERSION})
 
 if(NOT DEFINED QT_NAMES)
-    SET(QT_NAMES "Qt6" "Qt5")
+  set(QT_NAMES "Qt6" "Qt5")
 endif()
 
 find_package(
-  QT NAMES ${QT_NAMES}#Qt6 Qt5
+  QT NAMES ${QT_NAMES} # Qt6 Qt5
   COMPONENTS Core Network Qml
   REQUIRED)
 
@@ -17,9 +19,9 @@ add_subdirectory(BGMRPCObjectLoader)
 add_subdirectory(BGMRPCCtrl)
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    add_subdirectory(BGMRPCd)
-    add_subdirectory(BGMRPCClient)
-    add_subdirectory(BGMRPCClientQml)
+  add_subdirectory(BGMRPCd)
+  add_subdirectory(BGMRPCClient)
+  add_subdirectory(BGMRPCClientQml)
 endif()
 
 add_subdirectory(interfaces)
