--- a/BGMRPCObjectLoader/CMakeLists.txt
+++ b/BGMRPCObjectLoader/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.18)
 
+include(../cmake/BGMRPC.cmake)
+
 project(
   BGMRPCObjectLoader
   LANGUAGES CXX
-  VERSION 1.0.0)
-
-include(../cmake/BGMRPC.cmake)
+  VERSION ${BGMRPC_VERSION})
 
 find_package(
   QT NAMES Qt6 Qt5
@@ -17,9 +17,9 @@ find_package(
   REQUIRED)
 
 if(QT_VERSION_MAJOR EQUAL 5)
-    set(RUNTIME_OUTPUT_NAME "BGMRPCObjectLoader-qt5")
+  set(RUNTIME_OUTPUT_NAME "BGMRPCObjectLoader-qt5")
 else()
-    set(RUNTIME_OUTPUT_NAME "BGMRPCObjectLoader")
+  set(RUNTIME_OUTPUT_NAME "BGMRPCObjectLoader")
 endif()
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -29,7 +29,9 @@ add_executable(BGMRPCObjectLoader main.cpp)
 
 set_target_properties(
   BGMRPCObjectLoader
-  PROPERTIES OUTPUT_NAME ${RUNTIME_OUTPUT_NAME}
+  PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR}
+             VERSION ${PROJECT_VERSION}
+             OUTPUT_NAME ${RUNTIME_OUTPUT_NAME}
              INSTALL_RPATH_USE_LINK_PATH ON
              INSTALL_RPATH "${BGMRPC_REMOTE}/${CMAKE_INSTALL_LIBDIR}")
 
@@ -39,7 +41,8 @@ include_directories(${BGMRPCCommon_includeDir}
 target_link_libraries(
   BGMRPCObjectLoader
   PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Network
-          BGMRPCCommon BGMRPCObjectInterface)
+          BGMRPCCommon.${BGMRPC_VERSION_MAJOR}
+          BGMRPCObjectInterface.${BGMRPC_VERSION_MAJOR})
 
 install(TARGETS BGMRPCObjectLoader
         RUNTIME DESTINATION ${BGMRPC_REMOTE}/${CMAKE_INSTALL_BINDIR}
