--- a/interfaces/BGCMS/CMakeLists.txt
+++ b/interfaces/BGCMS/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.18)
 
+include(../../cmake/BGMRPC.cmake)
+
 project(
   BGCMSApp
   LANGUAGES CXX
-  VERSION 1.0.0)
-
-include(../../cmake/BGMRPC.cmake)
+  VERSION ${BGMRPC_VERSION})
 
 find_package(
   QT NAMES Qt6 Qt5
@@ -22,24 +22,24 @@ set(CMAKE_AUTOMOC ON)
 include_directories(${BGMRPCCommon_includeDir}
                     ${BGMRPCObjectInterface_includeDir})
 
-add_library(BGCMSApp SHARED ""
-    BGCMS_global.h)
-target_sources(
-  BGCMSApp
-  PRIVATE ${CMAKE_CURRENT_LIST_DIR}/bgcms.h
-          ${CMAKE_CURRENT_LIST_DIR}/bgcms.cpp)
+add_library(BGCMSApp SHARED "" BGCMS_global.h)
+target_sources(BGCMSApp PRIVATE ${CMAKE_CURRENT_LIST_DIR}/bgcms.h
+                                ${CMAKE_CURRENT_LIST_DIR}/bgcms.cpp)
 
 set_target_properties(
-BGCMSApp
-PROPERTIES #SOVERSION ${PROJECT_VERSION_MAJOR}
-           #VERSION ${PROJECT_VERSION}
-           OUTPUT_NAME BGCMSApp
-           INSTALL_RPATH_USE_LINK_PATH ON
-           INSTALL_RPATH "${BGMRPC_REMOTE}/${CMAKE_INSTALL_LIBDIR}")
+  BGCMSApp
+  PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR}
+             VERSION ${PROJECT_VERSION}
+             OUTPUT_NAME BGCMSApp
+             INSTALL_RPATH_USE_LINK_PATH ON
+             INSTALL_RPATH "${BGMRPC_REMOTE}/${CMAKE_INSTALL_LIBDIR}")
 target_link_libraries(
- BGCMSApp
- PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Network
-         Qt${QT_VERSION_MAJOR}::Qml BGMRPCObjectInterface BGMRPCCommon)
+  BGCMSApp
+  PRIVATE Qt${QT_VERSION_MAJOR}::Core
+          Qt${QT_VERSION_MAJOR}::Network
+          Qt${QT_VERSION_MAJOR}::Qml
+          BGMRPCObjectInterface.${BGMRPC_VERSION_MAJOR}
+          BGMRPCCommon.${BGMRPC_VERSION_MAJOR})
 
 install(TARGETS BGCMSApp LIBRARY DESTINATION ${BGMRPC_REMOTE}/interfaces
                                  COMPONENT BGMRPC_remote_interface_BGCMSApp)
