--- a/interfaces/JsPlugin2/CMakeLists.txt
+++ b/interfaces/JsPlugin2/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 3.18)
 
-include(../../cmake/BGMRPC.cmake)
+include(../../cmake/VERSION.cmake)
 
 project(
   JsPlugin2
   LANGUAGES CXX
   VERSION ${BGMRPC_VERSION})
+
+include(../../cmake/BGMRPC.cmake)
 
 find_package(
   QT NAMES Qt6 Qt5
@@ -40,11 +42,8 @@ set_target_properties(
 
 target_link_libraries(
   JsPlugin2
-  PRIVATE Qt${QT_VERSION_MAJOR}::Core
-          Qt${QT_VERSION_MAJOR}::Network
-          Qt${QT_VERSION_MAJOR}::Qml
-          BGMRPCObjectInterface.${BGMRPC_VERSION_MAJOR}
-          BGMRPCCommon.${BGMRPC_VERSION_MAJOR})
+  PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Network
+          Qt${QT_VERSION_MAJOR}::Qml BGMRPCObjectInterface BGMRPCCommon)
 
 install(TARGETS JsPlugin2 LIBRARY DESTINATION ${BGMRPC_REMOTE}/interfaces
                                   COMPONENT BGMRPC_remote_interface_JsPlugin2)
