--- a/BGMRPCObjectLoader/CMakeLists.txt
+++ b/BGMRPCObjectLoader/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 3.18)
 
-include(../cmake/BGMRPC.cmake)
+include(../cmake/VERSION.cmake)
 
 project(
   BGMRPCObjectLoader
   LANGUAGES CXX
   VERSION ${BGMRPC_VERSION})
+
+include(../cmake/BGMRPC.cmake)
 
 find_package(
   QT NAMES Qt6 Qt5
@@ -41,8 +43,7 @@ include_directories(${BGMRPCCommon_includeDir}
 target_link_libraries(
   BGMRPCObjectLoader
   PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Network
-          BGMRPCCommon.${BGMRPC_VERSION_MAJOR}
-          BGMRPCObjectInterface.${BGMRPC_VERSION_MAJOR})
+          BGMRPCCommon BGMRPCObjectInterface)
 
 install(TARGETS BGMRPCObjectLoader
         RUNTIME DESTINATION ${BGMRPC_REMOTE}/${CMAKE_INSTALL_BINDIR}
