--- a/BGMRPCObjectLoader/CMakeLists.txt
+++ b/BGMRPCObjectLoader/CMakeLists.txt
@@ -29,6 +29,8 @@ endif()
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
+set(CMAKE_EXECUTABLE_SUFFIX "")
+
 add_executable(BGMRPCObjectLoader main.cpp)
 
 set_target_properties(
