NS_BGMRPCObjectInterface::caller, m_dataSocket >>> m_cliDataSlot; NS_BGMRPC::ObjectPlug >>> ObjectCtrl; Client, m_BGMRPCSocket >>> m_BGMRPCCliSlot, m_relatedObjectSockets >>> m_dataConnecters; CtlBase, m_ctrlSocket >>> m_ctrlSlot

--- a/BGMRPCd/CMakeLists.txt
+++ b/BGMRPCd/CMakeLists.txt
@@ -32,8 +32,8 @@ add_executable(
   client.h
   client.cpp
   main.cpp
-  objectplug.h
-  objectplug.cpp
+  objectctrl.h
+  objectctrl.cpp
   serverctrl.h
   serverctrl.cpp
   ctrlbase.h
