--- a/BGMRPCd/CMakeLists.txt
+++ b/BGMRPCd/CMakeLists.txt
@@ -2,10 +2,7 @@ cmake_minimum_required(VERSION 3.18)
 
 include(../cmake/VERSION.cmake)
 
-project(
-  BGMRPCd
-  LANGUAGES CXX
-  VERSION ${BGMRPC_VERSION})
+project(BGMRPCd LANGUAGES CXX)
 
 include(../cmake/BGMRPC.cmake)
 
