reorganized my project structure by relocating certain subdirectories out and merging them into subdirectories of another project.

--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -12,6 +12,5 @@ if(QT_VERSION_MAJOR EQUAL 5)
 elseif(QT_VERSION_MAJOR EQUAL 6)
   add_subdirectory(MissingObjectHandler)
   add_subdirectory(JsPlugin2)
-  add_subdirectory(BGCMS)
-  add_subdirectory(Graphviz)
+  # add_subdirectory(BGCMS) add_subdirectory(Graphviz)
 endif()
