--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,21 @@
 cmake_minimum_required(VERSION 3.16)
 
+include(../cmake/VERSION.cmake)
+
 project(
   BGMRPCClientQml
-  VERSION 0.1
+  VERSION ${BGMRPC_VERSION}
   LANGUAGES CXX)
 
-include(../cmake/BGStudio.cmake)
-include(../cmake/BGMRPC.cmake)
 include(../cmake/BGSQml.cmake)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(QT_QML_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
-message("${CMAKE_BINARY_DIR} --- ${CMAKE_CURRENT_SOURCE_DIR}")
 find_package(
   Qt6 6.2
-  COMPONENTS Quick
+  COMPONENTS Quick WebSockets Network
   REQUIRED)
 
 qt_add_library(BGMRPCClientQml STATIC)
@@ -26,10 +25,15 @@ qt_add_qml_module(
   BGStudio.BGMRPC
   VERSION
   1.0
+  OUTPUT_DIRECTORY
+  BGStudio/BGMRPC
   SOURCES
   bgmrpcclientqml.cpp
   bgmrpcclientqml.h
-  NO_GENERATE_PLUGIN_SOURCE)
+  calling.h
+  calling.cpp
+  bgmrpccommonqml.h
+  bgmrpccommonqml.cpp)
 
 set_target_properties(
   BGMRPCClientQml
@@ -43,9 +47,7 @@ set_target_properties(
 target_compile_definitions(
   BGMRPCClientQml
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-target_link_libraries(BGMRPCClientQml PRIVATE Qt6::Quick)
+target_link_libraries(BGMRPCClientQml PRIVATE Qt6::Quick Qt6::WebSockets)
 
 target_include_directories(BGMRPCClientQml PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/BGStudio
-        DESTINATION ${BGS_QML_IMPORT_PATH})
